Add taskio page

--- a/profficient.html
+++ b/profficient.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Portfolio</title>
+    <title>Project: profficient</title>
     <link
     rel="stylesheet"
     type="text/css"
@@ -34,7 +34,7 @@
 
         <div data-aos="fade-right" data-aos-delay="400">
             <h2>Idea</h2>
-            <p>I had an amazing opportunity with my project group to come up with our project. 
+            <p>I had an amazing opportunity with my project group to come up with our own project. 
                 This project started at the beginning of the corona crisis. 
                 We were brainstorming on new ideas and we came with the idea of a collaboration tool for small businesses. 
                 The tool is based on communication. The main functionality is team chat. This idea was the most relevant and useful.
@@ -59,7 +59,7 @@
         <div data-aos="fade-up" data-aos-delay="400" class="learn">
             <h2>What did I learn?</h2>
             <p>I have learned a lot about how developing teams are working in the field. 
-             <p>   These are the skills that I have learned in this project:</p>
+             <p> These are the skills that I have learned in this project:</p>
             <br><br>
             <p>- Agile Scrum</p>
             <p>- End-user interviews</p>
@@ -68,6 +68,10 @@
             <p>- Git/Github</p>
             <p>- Basic database knowledge</p>
             <p>- Basic PHP</p>
+        </div>
+
+        <div class="back" data-aos="fade-up" data-aos-delay="400">
+            <a class="button" href="index.html">go back</a>
         </div>
 
 
