Updated the date

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
             <div class="about">
                 <p class="p1"> 
                     <br>Hi, how are you? 
-                    <br><br>My name is Martijn and I am a Front-End Developer student at Hanze University of Applied Sciences Groningen.
+                    <br><br>My name is Martijn and I am a Front-End Developer and UI/UX Designer student at Hanze University of Applied Sciences Groningen.
                     <br><br>I am a big fan of minimal designs and user-friendly interfaces.
                 </p>
                 <p class="p2">
@@ -215,7 +215,7 @@
 
 
         <section class="footer">
-                Martijn Jongman | 2020
+                Martijn Jongman | updated in 2021
         </section>
 
 
